# aaa

./: aaa.cabal  cabal.project
common/: Common.hs  common.cabal
src/: MyLib.hs
