cabal-version:      2.4
name:               aaa
version:            0.1.0.0

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.13.0.0, aeson == 1.4.7.1, common
    hs-source-dirs:   src
    default-language: Haskell2010

executable aaa
    main-is:          Main.hs
    build-depends:
        base ^>=4.13.0.0,
        aaa
    hs-source-dirs:   app
    default-language: Haskell2010
